--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -349,7 +349,7 @@ and the software cost of $P$ ({\it i.e.}, software cost of the nodes and the com
 \vspace{-2 mm}
 \begin{align}
 \label{objective-function}
-minimize\quad h_x 
+minimize\quad h_x.
 \end{align}
 
 \textcolor{blue}{Consequently, the constraints can be reformulated based on Equations~\eqref{linear-programming-problem} and~\eqref{software-communication-costs} as:}
@@ -357,17 +357,17 @@ minimize\quad h_x
 \vspace{-2 mm}
 \begin{align}
 \label{hw-sw-partitioning}
-s\left(1-x\right) + c|Ex| \leq S_0
+s\left(1-x\right) + c|Ex| \leq S_0,
 \end{align}
 
 \vspace{-2 mm}
 \begin{align}
 \label{hw-sw-partitioning2}
-x \in \{0,1\}^n 
+x \in \{0,1\}^n, 
 \end{align}
 
 \vspace{2 mm}
-\textcolor{blue}{Where $h$, $s$ and $c$ are the vectors representing the cost functions, $E$ is the transposed incidence matrix of $G$ (indicating which edges cross the boundary between the contexts of hardware and software), $n$ is the number of nodes, and $x$ represents the decision variable (a binary vector indicating the partition: $1$ if the node is realized in hardware and $0$ if the node is realized in software)}. Concerning the complexity of this problem, \cite{Arato2003} demonstrate that it is NP-Hard, as defined in~\cite{Cormem}.
+\noindent \textcolor{blue}{where $h$, $s$ and $c$ are the vectors representing the cost functions, $E$ is the transposed incidence matrix of $G$ (indicating which edges cross the boundary between the contexts of hardware and software), $n$ is the number of nodes, and $x$ represents the decision variable (a binary vector indicating the partition: $1$ if the node is realized in hardware and $0$ if the node is realized in software)}. Concerning the complexity of this problem, \cite{Arato2003} demonstrate that it is NP-Hard, as defined in~\cite{Cormem}.
 
 %----------------------------------------------
 \section{Analysis of the partitioning problem}
