[A-15] In ESBMC-PS, how are the decision variables selected by each worker? Could two workers evaluate the same possible solution? Are the "fork" and "join" of the process employed a single time? Do the workers have communication or information interchange? Besides, the author/s said "the processor does not remain idle for a longer period and thus there is almost no optimization", then what is the contribution of this proposal?

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -418,7 +418,7 @@ main {
 \end{lstlisting}
 
 \vspace{2 mm}
-\textcolor{blue}{It is possible to instruct ESBMC with which type of values the variables must be tested. Therefore, there is a declaration to populate all decision variables $x$ with non-deterministic Boolean values. As a result, the Boolean value that is assigned to each decision variable $x_i$ is actually selected by the SMT Solver, during its solving phase, which checks once all possible combinations to yield a feasible solution, {\it e.g.}, by handling the terms in the given background theory using a decision procedure~\cite{DeMoura2008,Brummayer2009}. If this is achieved, the ASSUME directive ensures the compliance of the constraint $A.x \leq b$}.
+\textcolor{blue}{It is possible to instruct ESBMC with which type of values the variables must be evaluated. Therefore, there is a declaration to populate all decision variables $x$ with non-deterministic Boolean values. As a result, the Boolean value that is assigned to each decision variable $x_i$ is actually selected by the SMT Solver, during its solving phase, which checks once all possible combinations to yield a feasible solution, {\it e.g.}, by handling the terms in the given background theory using a decision procedure~\cite{DeMoura2008,Brummayer2009}. If this is achieved, the ASSUME directive ensures the compliance of the constraint $A.x \leq b$}.
 
 A loop controls the cost of hardware hint, starting with zero and reaching the maximum value considering the case, where all nodes are partitioned to hardware ($H_{max}$). To every test performed, the hardware hint is compared to the feasible solution. This is accomplished by an \textit{ASSERT} statement at the end of the algorithm, a predicate that controls the halt condition (a \textit{true-false} statement). If the predicate is \textit{FALSE}, then the optimization is finished, {\it i.e.}, the solution is found. 
 
