revised version of the paper and the reply letter

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -130,7 +130,7 @@ E-mail: \{nonono\}@nonono.com}
 %E-mail: prhsilva2012@gmail.com, lucascordeiro@ufam.edu.br}
 
 \begin{abstract}
-We present new alternative approaches to solve the hardware and software (HW-SW) partitioning problem. First, we use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) in conjunction with a multi-core support using Open Multi-Processing to create four variants to solve the partitioning problem. Multi-core SMT-based BMC approach allows initializing many verification instances using different approaches based on the number of available processing cores. In particular, each instance checks for a different optimum value until the optimization problem is satisfied. We implement our algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). Additionally, we integrate the maximum satisfiability solver $\nu$Z tool into ESBMC, which provides a portfolio of approaches for solving linear optimization problems over SMT formulas. We compare all proposed approaches to a state-of-the-art optimization tool (MATLAB). Experimental results show that there is no single optimization tool to solve all HW-SW partitioning benchmarks.
+\textcolor{blue}{Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) is well known by its capability to verify software. Its use as optimization tool, to solve hardware and software (HW-SW) partitioning problem, is something new. Moreover, its integration with the maximum satisfiability solver $\nu$Z tool, which provides a portfolio of approaches for solving linear optimization problems over SMT formulas, is unprecedented. We present new alternative approaches to solve the HW-SW partitioning problem. First, we use BMC based on SMT in conjunction with a multi-core support using Open Multi-Processing to create four variants to solve the partitioning problem. In other approach, we integrate the maximum satisfiability solver $\nu$Z tool into the BMC tool, making BMC as a specialized solution for optimization in a single-core environment. Multi-core SMT-based BMC approach allows initializing many verification instances using different approaches based on the number of available processing cores, where each instance checks for a different optimum value until the optimization problem is satisfied. We implement five different algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). We compare all proposed approaches to a state-of-the-art optimization tool (MATLAB). Experimental results show that there is no single optimization tool to solve all HW-SW partitioning benchmarks, but based in medium complexity benchmarks, ESBMC integrated with $\nu$Z was faster and precise.}
 \end{abstract}
 
 \KEYWORD{hardware-software co-design, hardware-software partitioning, optimization, model checking, multi-core, maximum satisfiability.}
@@ -316,7 +316,7 @@ The mathematical modeling of the HW-SW partitioning problem was taken from~\cite
 \label{Informal-Model-or-Assumptions}
 %----------------------------------------------
 
-The informal model can be described by five characteristics. First, there is only one software context, {\it i.e.}, there is just one general-purpose processor, and there is only one hardware context. The components of the system must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the running time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, and energy consumption. Fourth, based on the premise that hardware is significantly faster than software, the running time of the components in hardware is considered as zero. Finally, if two components are mapped to the same context, then there is no overhead of communication between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this work. Hardware components do not need scheduling, because the running time is assumed to be zero. Because there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, where the focus is on bipartitioning, as shown in~\cite{Teich2012}.
+The informal model can be described by five characteristics. First, there is only one software context, {\it i.e.}, there is just one general-purpose processor, and there is only one hardware context. The components of the system must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the running time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, or energy consumption \textcolor{blue}{(the decision is made by user or from project requirement).} Fourth, based on the premise that hardware is significantly faster than software, the running time of the components in hardware is considered as zero. Finally, if two components are mapped to the same context, then there is no overhead of communication between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this work. Hardware components do not need scheduling, because the running time is assumed to be zero. Because there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, \textcolor{blue}{with a simplified HW-SW model,} where the focus is on bipartitioning, as shown in~\cite{Teich2012}.
 
 %----------------------------------------------
 \subsection{Formal Model}
@@ -749,13 +749,14 @@ The clustering benchmark seems to be the limit to test the ESBMC (described) imp
 \label{Conclusions}
 %----------------------------------------------
 
-We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. \textcolor{blue}{Below that limit of nodes, the best solution turns out to be ESBMC-$\nu$Z since its execution time is faster and its result is precise.} ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
+We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. \textcolor{blue}{Below that limit of nodes, the best solution turns out to be ESBMC-$\nu$Z since its execution time is 4,3 to 7,5 times faster than ILP, faster than any other ESBMC approach (until 462 times faster) and its result is precise (when compared with GA.} ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
 
 If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. \textcolor{blue}{ESBMC and $\nu$Z have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. Similarly, it is also possible to use free GA and ILP libraries (BSD-Style and MIT licenses) for different programing languages.} 
 
 Experimental results also pointed to an improvement of ESBMC, when using a parallel approach. The fastest ESBMC approach is ESBMC-PB, which produces good results for an intermediate amount of edges and nodes. Thus, considering that nowadays processors have more and more cores, when modeling the problem, it is possible to consider multi-core model checking as an alternative to solve the HW-SW partitioning problem. 
 
-Finally, there is an issue about $150$ nodes problem, since it seems to be the limit of multi-core ESBMC. However, it really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for larger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the search space size. In future work, we will address improvements in ESBMC to remove the parallel layer on top of ESBMC and implement it during symbolic execution so that we can optimize the overall verification time.
+Finally, there is an issue about $150$ nodes problem, since it seems to be the limit of multi-core ESBMC. However, it really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for larger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the search space size. In future work, we will address improvements in ESBMC to remove the parallel layer on top of ESBMC and implement it during symbolic execution so that we can optimize the overall verification time. \textcolor{blue}{Moreover, it will address specifically more complex types of architectures of HW-SW model, including more than one CPU, and the assumption of just singled-threaded program execution
+will be extended to multiprogramming and multiprocessing (second generation of co-design).}
 
 \begin{thebibliography}{10}
 
@@ -844,14 +845,14 @@ Muller, M. (2002) 'OpenMP Architecture Review Board, OpenMP C and C++ Applicatio
 \bibitem[\protect\citeauthoryear{Narodytska and Bacchus}{2014}]{NarodytskaN}
 Narodytska, N. and Bacchus, F. (2014) 'Maximum Satisfiability Using Core-Guided MAXSAT Resolution', {\it Proceedings of the Conference on Artificial Intelligence}, pp.2717--2723.
 
-\bibitem[\protect\citeauthoryear{Qawasmeh \textit{et al.}}{2014}]{Qawasmeh2014}
-Qawasmeh, A., Malik, A. and Chapman, B. (2014) 'OpenMP task scheduling analysis via OpenMP runtime API and tool visualization', {\it Proceedings of the International Symposium on Parallel Distributed processing}, pp.1049--1058.
-
 \bibitem[\protect\citeauthoryear{Paci \textit{et al.}}{2008}]{Federica2008}
 Paci, F., Ferrini, R., Sun, Y. and Bertino, E. (2008) 'Authorization and User Failure Resiliency for WS-BPEL business processes', {\it Proceedings of the International Conference on Service-Oriented Computing}, pp.116--131.
 
 \bibitem[\protect\citeauthoryear{Pavlinovi \textit{et al.}}{2015}]{Pavlinovic2015}
 Pavlinovi, Z., King, T. and Wies, T. (2015) 'Practical SMT-Based Type Error Localization', {\it Proceedings of the International Conference on Functional Programming}, pp.412--423.
+
+\bibitem[\protect\citeauthoryear{Qawasmeh \textit{et al.}}{2014}]{Qawasmeh2014}
+Qawasmeh, A., Malik, A. and Chapman, B. (2014) 'OpenMP task scheduling analysis via OpenMP runtime API and tool visualization', {\it Proceedings of the International Symposium on Parallel Distributed processing}, pp.1049--1058.
 
 \bibitem[\protect\citeauthoryear{Ramalho \textit{et al.}}{2013}]{Ramalho2013}
 Ramalho, M., Freitas, M., Sousa, F., Marques, H., Cordeiro, L. and Fischer, B. (2013) 'SMT-Based Bounded Model Checking of C++ Programs', {\it International Conference and Workshops on the Engineering of Computer-Based Systems}, pp.147--156.
