--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -155,11 +155,11 @@ no no no.\vs{9}}
 Nowadays, with the strong development of embedded systems, the design phase plays an important role. At early stages, the design is split into separated flows: hardware (HW) and software (SW). The partitioning decision process, which deals with decisions upon which parts of the application have to be designed in hardware and which one in software, must be supported by any well-structured methodology. If there is no methodology support, a number of issues, {\it e.g.}, design flow interruptions, redesigns, and undesired iterations may affect the overall development process, the quality, and the life-cycle of the final system.
 
 %-----------------related work came to here and was rewriten
-\textcolor{blue}{Since the first decade of 2000s, two main paths have been tracked to solve the HW-SW partitioning problem, {\it i.e.}, to find the exact solution of a optimization problem, as shown in~\cite{Mann2007}; to use heuristics to speed up performance time, as shown in~\cite{Arato2003} and~\cite{Arato2005}. It is worth mentioning that the using heuristics the final solution is not necessarily an optimal global solution.} 
+\textcolor{blue}{Since the first decade of 2000s, two main paths have been tracked to solve the HW-SW partitioning problem, {\it i.e.}, to find the exact solution of a optimization problem, as presented by~\cite{Mann2007}; to use heuristics to speed up performance time, as presented by~\cite{Arato2003} and~\cite{Arato2005}. It is worth mentioning that the using heuristics the final solution is not necessarily an optimal global solution.} 
 
-\textcolor{blue}{In terms of SMT-based verification, most related studies are restricted to present the model, its modification to programming languages ({\it e.g.}, C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs, and~\cite{Cordeiro2012} uses ESBMC for embedded ANSI-C software. In~\cite{Trindade2015}, and~\cite{Trindade2016} it was proven that it is possible to use ESBMC to solve HW-SW partitioning in a single- and multi-core way, but the former has performance issues that were improved by the latter, which used only a sequential search to perform multi-core model checking. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification, as shown in~\cite{Holzmann2011}, and modifications of internal search engines to add support for parallelism, as shown in~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solving, as described by~\cite{Wintersteiger2009}.} 
+\textcolor{blue}{In terms of SMT-based verification, most related studies are restricted to present the model, its modification to programming languages ({\it e.g.}, C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs, and~\cite{Cordeiro2012} uses ESBMC for embedded ANSI-C software. In~\cite{Trindade2015}, and~\cite{Trindade2016} it was proven that it is possible to use ESBMC to solve HW-SW partitioning in a single- and multi-core way, but the former has performance issues that were improved by the latter, which used only a sequential search to perform multi-core model checking. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification, as mentioned in~\cite{Holzmann2011}, and modifications of internal search engines to add support for parallelism, as presented by~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solving, as described by~\cite{Wintersteiger2009}.} 
 
-\textcolor{blue}{Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories, as shown in~\cite{Bjorner2015}. In particular, $\nu$Z tool offers substantial performance improvement in optimization problems, as described by~\cite{Bjorner2014} and~\cite{Bjorner2015}. As an application example, \cite{Pavlinovic2015} propose an approach which considers all possible compiler error sources for statically typed functional programming languages and reports the most useful one subject to some usefulness criterion. The authors formulate this alternative single-core approach as an optimization problem related to SMT and use $\nu$Z to compute an optimal error source in a given ill-typed program.}
+\textcolor{blue}{Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories, as presented by~\cite{Bjorner2015}. In particular, $\nu$Z tool offers substantial performance improvement in optimization problems, as described by~\cite{Bjorner2014} and~\cite{Bjorner2015}. As an application example, \cite{Pavlinovic2015} propose an approach which considers all possible compiler error sources for statically typed functional programming languages and reports the most useful one subject to some usefulness criterion. The authors formulate this alternative single-core approach as an optimization problem related to SMT and use $\nu$Z to compute an optimal error source in a given ill-typed program.}
 
 \textcolor{blue}{At this work, we apply SMT-based verification methods to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Experimental results are compared to ILP (integer linear programming), GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach, as described by~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab, as described in~\cite{TheMathWorks2013}, while $\nu$Z is a built-in tool to the SMT solver Z3. All multi-core ESBMC approaches, together with $\nu$Z, are implemented with the ESBMC tool. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification and a MaxSMT solver to check for HW-SW partitioning problems in embedded systems.}
 
@@ -212,18 +212,22 @@ Optimization is the act of obtaining the best result ({\it i.e.}, the optimal so
 \end{equation}
 
 \vspace{2 mm}
-In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, as described by~\cite{Rao2009}, {\it e.g.}, those used in the GA. The only drawback is that the found solution may not be the global minimum or maximum. Alternatively, tools such as ESBMC and $\nu$Z can be used to solve optimization problems so that the global minimum or maximum solution is found. The following sections describe the main features of ESBMC and $\nu$Z tools.
+Here can be cited the relevant work of ~\cite{Mann2007} in optimization, who modified a branch-and-bound algorithm to speed up the execution time. ~\cite{Sapienza2013} used multiple criteria decision analysis to solve the HW-SW partitioning problem.
+
+In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, as described by~\cite{Rao2009}, {\it e.g.}, those used in the GA. The only drawback is that the found solution may not be the global minimum or maximum. As relevant works, ~\cite{Jiang2012} used a GA mixed with simulated annealing. And~\cite{Huong2012} designed a Pareto optimization modified using GA.
+
+Alternatively, tools such as ESBMC and $\nu$Z can be used to solve optimization problems so that the global minimum or maximum solution is found. The following sections describe the main features of ESBMC and $\nu$Z tools.
 
 %----------------------------------------------
 \subsection{Bounded Model Checking with ESBMC}
 \label{Bounded-Model-Checking-with-ESBMC}
 %----------------------------------------------
 
-Among the recent model checking techniques, there is one that combines model checking with satisﬁability solving. This technique, known as bounded model checking (BMC), does a very fast exploration of the state space, and for some types of problems, it offers large performance improvements over previous approaches, as shown in~\cite{Biere2009}. In particular, BMC based on Boolean Satisfiability (SAT) has been introduced as a complementary technique to binary decision diagrams for alleviating the state explosion problem, as described by~\cite{Clarke2001}. 
+Among the recent model checking techniques, there is one that combines model checking with satisﬁability solving. This technique, known as bounded model checking (BMC), does a very fast exploration of the state space, and for some types of problems, it offers large performance improvements over previous approaches, as \textcolor{blue}{presented by}~\cite{Biere2009}. In particular, BMC based on Boolean Satisfiability (SAT) has been introduced as a complementary technique to binary decision diagrams for alleviating the state explosion problem, as described by~\cite{Clarke2001}. 
 
-The basic idea of BMC is to check the negation of a given property at a given depth: given a transition system $M$, a property $\phi$, and a bound $k$, BMC unrolls the system $k$ times and translates it into a verification condition (VC) $\psi$  such that $\psi$ is satisfiable if and only if $\phi$ has a counterexample of depth $k$ or less, as defined in~\cite{Biere2009}. To cope with increasing software complexity, SMT solvers can be used as back-ends for solving the generated VCs, as shown in~\cite{Cordeiro2012},~\cite{Armando2009},~\cite{Ganai2006}. 
+The basic idea of BMC is to check the negation of a given property at a given depth: given a transition system $M$, a property $\phi$, and a bound $k$, BMC unrolls the system $k$ times and translates it into a verification condition (VC) $\psi$  such that $\psi$ is satisfiable if and only if $\phi$ has a counterexample of depth $k$ or less, as defined in~\cite{Biere2009}. To cope with increasing software complexity, SMT solvers can be used as back-ends for solving the generated VCs, \textcolor{blue}{as presented by}~\cite{Cordeiro2012},~\cite{Armando2009},~\cite{Ganai2006}. 
 
-In this study, ESBMC has been used as a BMC tool to solve HW-SW partitioning problems, as shown in~\cite{Cordeiro2012}. 
+In this study, ESBMC has been used as a BMC tool to solve HW-SW partitioning problems, as mentioned in~\cite{Cordeiro2012}. 
 In particular, there are two directives in ESBMC that can be used to guide it to solve an optimization problem: ASSUME and ASSERT. The directive ASSUME is responsible for ensuring the compliance of constraints (software costs), and the directive ASSERT controls the halt condition (minimum hardware cost). Then, with some C/C++ code, it is possible to guide ESBMC to solve optimization problems.
 
 %----------------------------------------------
@@ -233,7 +237,7 @@ In particular, there are two directives in ESBMC that can be used to guide it to
 
 Fig.~\ref{ESBMC-Architecture} shows the current ESBMC architecture, which consists of the C/C$++$ parser, GOTO Program, GOTO Symex, and SMT solver, as described by~\cite{Ramalho2013}. In particular, ESBMC compiles C/C$++$ code into equivalent GOTO-programs ({\it i.e.}, control-flow graphs) using a gcc-compliant style. GOTO-programs can then be processed by the symbolic execution engine, called GOTO Symex, where two recursive functions compute the constraints ($C$) and properties ($P$); finally, it generates two sets of equations ({\it i.e.},\:$C \land \neg P$), which are checked for satisfiability by an SMT solver. 
 
-The main factor for ESBMC to use only a single-core relies on its back-end ({\it i.e.}, SMT Solver). Currently, the SMT solvers supported by ESBMC are: Z3, as shown in~\cite{DeMoura2008}; Boolector, as shown in~\cite{Brummayer2009}; MathSAT, as shown in~\cite{Barrett2011}; CVC4, as shown in~\cite{Bozzano2005}; and Yices, as shown in~\cite{Dutertre2014}. Most of them do provide neither multi-threaded support nor a parallel version to solve the generated SMT equations.
+The main factor for ESBMC to use only a single-core relies on its back-end ({\it i.e.}, SMT Solver). Currently, the SMT solvers supported by ESBMC are: Z3, as \textcolor{blue}{presented by}~\cite{DeMoura2008}; Boolector, as \textcolor{blue}{mentioned in}~\cite{Brummayer2009}; MathSAT, as \textcolor{blue}{presented by}~\cite{Barrett2011}; CVC4, as \textcolor{blue}{presented by}~\cite{Bozzano2005}; and Yices, as \textcolor{blue}{presented by}~\cite{Dutertre2014}. Most of them do provide neither multi-threaded support nor a parallel version to solve the generated SMT equations.
 
 \begin{figure}[ht]
 	\caption{ESBMC architecture.}
@@ -249,7 +253,7 @@ The main factor for ESBMC to use only a single-core relies on its back-end ({\it
 
 The OpenMP is a set of directives for parallel programming that augments C/C$++$ and Fortran languages, as defined in~\cite{OpenMP1998}. OpenMP supports most processor architectures and operating systems, {\it e.g.}, Solaris, AIX, HP-UX, Linux, Mac OS X, and Windows. OpenMP uses a portable and very robust model to facilitate the development of parallel applications for a variety of platforms. 
 
-In particular, OpenMP uses the \textit{fork-join} model of parallel execution, as shown in~\cite{OpenMP1998}. The main thread executes the sequential parts of the program; if a parallel region is encountered, then it forks a team of worker threads. After the parallel region finishes ({\it i.e.}, the API waits until all threads terminate), then the main procedure returns to the single-threaded execution mode, as shown in~\cite{Wu2014}.
+In particular, OpenMP uses the \textit{fork-join} model of parallel execution, as \textcolor{blue}{mentioned} in~\cite{OpenMP1998}. The main thread executes the sequential parts of the program; if a parallel region is encountered, then it forks a team of worker threads. After the parallel region finishes ({\it i.e.}, the API waits until all threads terminate), then the main procedure returns to the single-threaded execution mode, as \textcolor{blue}{presented by}~\cite{Wu2014}.
 
 The most basic directive of OpenMP is the ``\textit{\#pragma omp parallel for}'', which parallelizes the enclosing loop; a basic OpenMP example is shown below:
 
@@ -268,9 +272,9 @@ In the above example, the {\it for} loop is executed in parallel. Each iteration
 \label{Optimization-with-Vz}
 %----------------------------------------------
 
-In this study, the SMT solver Z3 is used to check for the satisfiability of formulas generated from the HW-SW partitioning problem, as shown in~\cite{Bjorner2014}. In particular, we exploit the use of MaxSMT solver $\nu$Z, which is implemented on top of the SMT solver Z3, in order to solve optimization problems; $\nu$Z base function is to optimize objective functions, which formulate optimized criteria, within the logical context of constraints.~$\nu$Z also includes an incremental version of the Maximum Resiliency (MaxRes), as shown in~\cite{Federica2008}, in order to achieve Maximum Satisfiability (MaxSAT), as defined in~\cite{NarodytskaN} and a Simplex to solve numbers without defined patterns. 
+In this study, the SMT solver Z3 is used to check for the satisfiability of formulas generated from the HW-SW partitioning problem, as \textcolor{blue}{presented by}~\cite{Bjorner2014}. In particular, we exploit the use of MaxSMT solver $\nu$Z, which is implemented on top of the SMT solver Z3, in order to solve optimization problems; $\nu$Z base function is to optimize objective functions, which formulate optimized criteria, within the logical context of constraints.~$\nu$Z also includes an incremental version of the Maximum Resiliency (MaxRes), as \textcolor{blue}{mentioned} in~\cite{Federica2008}, in order to achieve Maximum Satisfiability (MaxSAT), as defined in~\cite{NarodytskaN} and a Simplex to solve numbers without defined patterns. 
 
-In $\nu$Z, MaxSAT is responsible for the restrictions, while OptSMT optimizes linear arithmetic objectives, as shown in~\cite{Bjorner2015}. In summary, $\nu$Z provides three main functions that extend Z3 for solving optimization problems, which are: \textit{maximize}, \textit{minimize}, and \textit{assert-soft}.
+In $\nu$Z, MaxSAT is responsible for the restrictions, while OptSMT optimizes linear arithmetic objectives, as \textcolor{blue}{presented by}~\cite{Bjorner2015}. In summary, $\nu$Z provides three main functions that extend Z3 for solving optimization problems, which are: \textit{maximize}, \textit{minimize}, and \textit{assert-soft}.
 
 \begin{itemize}
 \item{\textbf{maximize(T)}
@@ -293,7 +297,7 @@ As an example, one can optimize $\left(K + W\right)$, which is subject to restri
 \end{lstlisting}
 
 \vspace{2 mm}
-Fig.~\ref{vZ-Architecture} shows the $\nu$Z architecture. Initially, the SMT formula with objectives is converted to $0-1$ constraints, which leads to a Pseudo-Boolean Optimization (PBO), as shown in~\cite{Barth1995} and~\cite{Vasco2005}. If there are many objective functions, $\nu$Z invokes OptSAT for arithmetic or MaxSAT for soft constraints. For constraints using real values, $\nu$Z combines linear arithmetic objectives and uses only one instance of OptSMT. When ``soft constrains'' is used in the mode `` lexicographic'', $\nu$Z invokes MaxSAT using multiple calls for its engine.
+Fig.~\ref{vZ-Architecture} shows the $\nu$Z architecture. Initially, the SMT formula with objectives is converted to $0-1$ constraints, which leads to a Pseudo-Boolean Optimization (PBO), as \textcolor{blue}{mentioned} in~\cite{Barth1995} and~\cite{Vasco2005}. If there are many objective functions, $\nu$Z invokes OptSAT for arithmetic or MaxSAT for soft constraints. For constraints using real values, $\nu$Z combines linear arithmetic objectives and uses only one instance of OptSMT. When ``soft constrains'' is used in the mode `` lexicographic'', $\nu$Z invokes MaxSAT using multiple calls for its engine.
 
 \begin{figure}[ht]
 	\caption{$\nu$Z architecture extracted from~\cite{Bjorner2015}.}
@@ -316,7 +320,7 @@ The mathematical modeling of the HW-SW partitioning problem was taken from~\cite
 \label{Informal-Model-or-Assumptions}
 %----------------------------------------------
 
-The informal model can be described by five characteristics. First, there is only one software context, {\it i.e.}, there is just one general-purpose processor, and there is only one hardware context. The components of the system must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the running time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, or energy consumption \textcolor{blue}{(the decision is made by user or from project requirement).} Fourth, based on the premise that hardware is significantly faster than software, the running time of the components in hardware is considered as zero. Finally, if two components are mapped to the same context, then there is no overhead of communication between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this work. Hardware components do not need scheduling, because the running time is assumed to be zero. Because there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, \textcolor{blue}{with a simplified HW-SW model,} where the focus is on bipartitioning, as shown in~\cite{Teich2012}.
+The informal model can be described by five characteristics. First, there is only one software context, {\it i.e.}, there is just one general-purpose processor, and there is only one hardware context. The components of the system must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the running time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, or energy consumption \textcolor{blue}{(the decision is made by user or from project requirement).} Fourth, based on the premise that hardware is significantly faster than software, the running time of the components in hardware is considered as zero. Finally, if two components are mapped to the same context, then there is no overhead of communication between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this work. Hardware components do not need scheduling, because the running time is assumed to be zero. Because there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, \textcolor{blue}{with a simplified HW-SW model,} where the focus is on bipartitioning, as presented by~\cite{Teich2012}.
 
 %----------------------------------------------
 \subsection{Formal Model}
@@ -381,7 +385,7 @@ As computer hardware architecture moves from single- to multi-cores, parallel pr
 \label{ILPGA}
 %----------------------------------------------
 
-The ILP and GA were taken from our previous studies, from~\cite{Trindade2015} and~\cite{Trindade2016}. \textcolor{blue}{Both use slack variables in order to eliminate the modulus operator of Eq.~\eqref{hw-sw-partitioning} and to use commercial tools.} However, GA had improvements from the parameters of related studies in order to increase the solution accuracy without producing timeout. The tuning was performed by empirical tests and resulted in changing of three parameters, which are passed to the function \textit{ga} of MATLAB, as shown in~\cite{TheMathWorks2013}: the population size was set from $300$ to $500$, the Elite count changed from $2$ (default value) to $50$, and the number of generations changed from $100*NumberOfVariables$ (default) to $75$. \textcolor{blue}{All ILP and GA parameters were presented and discussed in~\cite{Trindade2015} and~\cite{Trindade2016}. In particular, the ILP and GA algorithms were chosen since they were also used in other related work, as~\cite{Arato2003} and~\cite{Mann2007}, thus facilitating the comparison to the present techniques (that we propose in this paper).}
+The ILP and GA were taken from our previous studies, from~\cite{Trindade2015} and~\cite{Trindade2016}. \textcolor{blue}{Both use slack variables in order to eliminate the modulus operator of Eq.~\eqref{hw-sw-partitioning} and to use commercial tools.} However, GA had improvements from the parameters of related studies in order to increase the solution accuracy without producing timeout. The tuning was performed by empirical tests and resulted in changing of three parameters, which are passed to the function \textit{ga} of MATLAB, as \textcolor{blue}{mentioned} in~\cite{TheMathWorks2013}: the population size was set from $300$ to $500$, the Elite count changed from $2$ (default value) to $50$, and the number of generations changed from $100*NumberOfVariables$ (default) to $75$. \textcolor{blue}{All ILP and GA parameters were presented and discussed in~\cite{Trindade2015} and~\cite{Trindade2016}. In particular, the ILP and GA algorithms were chosen since they were also used in other related work, as~\cite{Arato2003} and~\cite{Mann2007}, thus facilitating the comparison to the present techniques (that we propose in this paper).}
 
 %----------------------------------------------
 \subsection{Verification Algorithm using Sequential ESBMC}
@@ -567,7 +571,7 @@ meets the constraints, then the \textit{Fobj} value is provided.
 \label{Experimental-Evaluation}
 %----------------------------------------------
 
-This section is split into three parts. The setup is described in Section~\ref{Experimental-Setup}, while Section~\ref{Benchmarks-Description} describes all benchmarks that were used for performing the experimental evaluation. Section~\ref{Experimental-Results} reports a comparison among MATLAB, ESBMC-SS, ESBMC-PS, ESBMC-PB, and ESBMC-$\nu$Z using a set of standard HW-SW partitioning benchmarks, as shown in~\cite{Mann2007}.
+This section is split into three parts. The setup is described in Section~\ref{Experimental-Setup}, while Section~\ref{Benchmarks-Description} describes all benchmarks that were used for performing the experimental evaluation. Section~\ref{Experimental-Results} reports a comparison among MATLAB, ESBMC-SS, ESBMC-PS, ESBMC-PB, and ESBMC-$\nu$Z using a set of standard HW-SW partitioning benchmarks, as \textcolor{blue}{presented by}~\cite{Mann2007}.
 
 %----------------------------------------------
 \subsection{Experimental Setup}
@@ -580,7 +584,7 @@ ESBMC v$2$.$0$ running on a $64$-bit Ubuntu $14$.$04$.$1$ LTS operating system w
 
 All experiments were conducted on an otherwise idle Intel Core i$7$-$2600$ ($8$-cores), with $3$.$4$ GHz and $24$ GB of RAM, running Ubuntu $64$-bits. Each time was measured $3$ times (average taken). \textcolor{blue}{Empirical tests performed by the authors demonstrated that a higher number of measurements, for each technique, did not produce significant differences in the experimental results (which were always below 10\% and mostly around 3\%).}
 
-Based on standard deviation and tolerance interval to each set of time sample, it was obtained a statistical confidence of $91.7$\% to ESBMC (sequential, SS, PB and $\nu$Z), $95.9$\% to ESBMC-PS, and $92.0$\% to ILP and GA. A timeout condition (TO) is reached when the verification time is longer than $3600$ seconds. A memory-out (MO) occurs when the tool reaches $15$ GB of memory. \textcolor{blue}{The TO was defined based on previous empirical tests as well, where a larger TO ({\it e.g.}, $5000$ seconds) did not produce substantial differences in the experimental results.} 
+Based on \textcolor{blue}{mean,} standard deviation and tolerance interval to each set of time sample, it was obtained a \textcolor{blue}{confidence level} of $91.7$\% to ESBMC (sequential, SS, PB and $\nu$Z), $95.9$\% to ESBMC-PS, and $92.0$\% to ILP and GA. A timeout condition (TO) is reached when the verification time is longer than $3600$ seconds. A memory-out (MO) occurs when the tool reaches $15$ GB of memory. \textcolor{blue}{The TO was defined based on previous empirical tests as well, where a larger TO ({\it e.g.}, $5000$ seconds) did not produce substantial differences in the experimental results.} 
 
 %----------------------------------------------
 \subsection{Description of Benchmarks}
@@ -597,12 +601,12 @@ Based on standard deviation and tolerance interval to each set of time sample, i
 \toprule[1.5pt]
 \textbf{Name} & \textbf{Nodes} & \textbf{Edges} & \textbf{Description}\\
 \midrule
-\verb|CRC32| & \verb|25| & \verb|32| & \rmfamily 32-bit cyclic redundancy check, as shown in~\cite{Guthaus2001}\\
+\verb|CRC32| & \verb|25| & \verb|32| & \rmfamily 32-bit cyclic redundancy check, as \textcolor{blue}{presented by}~\cite{Guthaus2001}\\
 \hline
 \verb|Patricia| & \verb|21| & \verb|48| & \rmfamily
-\vspace{0.8 mm} Routine to insert values in Patricia Tree, as shown in ~\cite{Guthaus2001}\\
+\vspace{0.8 mm} Routine to insert values in Patricia Tree, as \textcolor{blue}{presented by} ~\cite{Guthaus2001}\\
 \hline
-\verb|Dijkstra| & \verb|26| & \verb|69| & \rmfamily \vspace{0.8 mm} Computer shortest paths in a graph, as shown in~\cite{Guthaus2001}\\
+\verb|Dijkstra| & \verb|26| & \verb|69| & \rmfamily \vspace{0.8 mm} Computer shortest paths in a graph, as \textcolor{blue}{presented by}~\cite{Guthaus2001}\\
 \hline
 \verb|Clustering| & \verb|150| & \verb|331| & \rmfamily \vspace{0.8 mm} Image segmentation algorithm in a medical application\\
 \hline
@@ -619,14 +623,14 @@ Based on standard deviation and tolerance interval to each set of time sample, i
 \end{minipage}
 
 \vspace{-3 mm}
-To perform the experiments, some benchmarks provided by~\cite{Mann2007} were used, as shown in Table~\ref{tab:Description-of-Benchmarks}. The nodes in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench, as shown in~\cite{Guthaus2001}. The clustering and fuzzy benchmarks are designed from~\cite{Mann2007} and are significantly large benchmarks. From the same authors, very complex benchmarks to test the limits of the applicability of techniques were used (RC$6$ and Mars). \textcolor{blue}{Note that we used the same number (and types) of benchmarks from the literature, in order to enable a fair comparison to other existing techniques presented in this study.}
+To perform the experiments, some benchmarks provided by~\cite{Mann2007} were used, as shown in Table~\ref{tab:Description-of-Benchmarks}. The nodes in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, i.e., running time of software and the communication time, and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench, as \textcolor{blue}{presented by}~\cite{Guthaus2001}. \textcolor{blue}{The fuzzy benchmark was created and presented by}~\cite{Mann2007} and is a significantly large benchmark. \textcolor{blue}{And also from ~\cite{Mann2007}, were used RC$6$ and Mars as very complex benchmarks to test the limits of the applicability of each technique. Note that we used the same number (and types) of benchmarks from the literature, in order to enable a fair comparison to other existing techniques presented in this study.}
 
 %----------------------------------------------
 \subsection{Experimental Results}
 \label{Experimental-Results}
 %----------------------------------------------
 
-Table~\ref{Experimental-results-of-the-complex-benchmarks} shows the experimental results using Matlab (ILP and GA) and ESBMC (ESBMC-SS, ESBMC-PS, ESBMC-PB, ESBMC-$\nu$Z) tools.
+Table~\ref{Experimental-results-of-the-complex-benchmarks} shows the experimental results using Matlab (ILP and GA) and ESBMC (ESBMC-SS, ESBMC-PS, ESBMC-PB, ESBMC-$\nu$Z) tools. \textcolor{blue}{The number of nodes, edges and the initial software cost (S0) are given to each benchmark. Hp and Sp represent the results of partitioning process for each technique, i.e., the optimized value of partitioned hardware and software. T(s) means the average time taken from the experiments. Particularly about GA there is an additional row informing how far from the exact answer is the found solution.}
 
 There is no single tool for efficiently solving all HW-SW partitioning benchmarks. In particular, the best (proposed) solution is ESBMC-$\nu$Z, which solves $4$ out of $7$ benchmarks; ESBMC-$\nu$Z is faster than ILP in all supported benchmarks ({\it i.e.}, CRC$32$, Patricia, Dijkstra, Clustering), but it returns three TOs (timeouts) related to RC6, Fuzzy and Mars benchmarks.
 
@@ -749,7 +753,7 @@ The clustering benchmark seems to be the limit to test the ESBMC (described) imp
 \label{Conclusions}
 %----------------------------------------------
 
-We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. \textcolor{blue}{Below that limit of nodes, the best solution turns out to be ESBMC-$\nu$Z since its execution time is 4,3 to 7,5 times faster than ILP, faster than any other ESBMC approach (until 462 times faster) and its result is precise (when compared with GA.} ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
+We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. \textcolor{blue}{Below that limit of nodes, the best solution turns out to be ESBMC-$\nu$Z since its execution time is 4,3 to 7,5 times faster than ILP, faster than any other ESBMC approach (until 462 times faster) and its result is precise (when compared with GA).} ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
 
 If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. \textcolor{blue}{ESBMC and $\nu$Z have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. Similarly, it is also possible to use free GA and ILP libraries (BSD-Style and MIT licenses) for different programing languages.} 
 
@@ -821,8 +825,16 @@ Holzmann, G., Joshi, R. and Groce, A. (2011) 'Swarm Verification Techniques', {\
 \bibitem[\protect\citeauthoryear{Holzmann}{2012}]{Holzmann2012}
 Holzmann, G. (2012) 'Parallelizing the spin model checker', {\it Proceedings of the International Symposium on Model Checking Software}, Vol. 7385, pp.155--171.
 
-\bibitem[\protect\citeauthoryear{Hong and Cai}{2010}]{Hong2010}
+\bibitem[\protect\citeauthoryear{Hong and Cai}{2010}]{Hong2012}
 Hong, L. and Cai, J. (2010) 'The application guide of mixed programming between MATLAB and other programming languages', {\it Proceedings of the International Conference on Computer and Automation Engineering}, pp.185--189.
+
+\bibitem[\protect\citeauthoryear{Huong and Binh}{2012}]{Huong2012}
+Huong, P. and Binh, N. (2012) 'An approach to design embedded systems by multi-objective optimization', {\it
+Proceedings of the International Conference on Advanced Technologies for Communications}, pp.165--169.
+
+\bibitem[\protect\citeauthoryear{Jiang\textit{et al.}}{2010}]{Jiang2012}
+Jiang, Y., Zhang, H., Jiao, X., Song, X., Hung, W., Gu, M. and Sun, J. (2012) 'Uncertain model and algorithm for
+hardware/software partitioning', {\it Proceedings of the IEEE Computer Society Annual Symposium on VLSI}, pp.243--248.
 
 \bibitem[\protect\citeauthoryear{Mann \textit{et al.}}{2007}]{Mann2007}
 Mann, A., Orban, A. and Arato, P. (2007) 'Finding optimal hardware/software partitions', {\it Formal Methods in System Design}, Vol. 31, No. 3, pp.241--263.
@@ -859,6 +871,11 @@ Ramalho, M., Freitas, M., Sousa, F., Marques, H., Cordeiro, L. and Fischer, B. (
 
 \bibitem[\protect\citeauthoryear{Rao}{2009}]{Rao2009}
 Rao, S. (2009) 'Engineering Optimization: Theory and Practice. 4th edition'.
+
+\bibitem[\protect\citeauthoryear{Sapienza \textit{et al.}}{2013}]{Sapienza2013}
+Sapienza, G., Seceleanu, T. and Crnknovic, I. (2013) 'Partitioning decision process for embedded hardware and
+software deployment', {\it Proceedings of the IEEE 37th Annual Conference and Workshops on Computer Software and
+Applications}, pp.674--680.
 
 \bibitem[\protect\citeauthoryear{Sebastiani and Trentin}{2015}]{Patrick2015}
 Sebastiani, R. and Trentin, P. (2015) 'OptiMathSAT: A Tool for Optimization Modulo Theories', {\it Proceedings of the International Conference on Computer Aided Verification}, Vol. 9206, pp.447--454.
